TF-24 (Forgot to switch branch) Added platform option to filter. First section of the home page now shows our games, platform links below that load into the games filter view showing only games from that platform.

--- a/FowlerSite/Views/Games/Filter.cshtml
+++ b/FowlerSite/Views/Games/Filter.cshtml
@@ -33,7 +33,7 @@
                         </div>
 
                         <!--Genre filter-->
-                        <h4 class="nk-widget-title"><span><span class="text-main-1">Genres</span></span></h4>
+                        <h4 class="nk-widget-title"><span><span class="text-main-1">Genre</span></span></h4>
                         <div class="nk-widget-content">
                             <div id="genre" class="input-group">
                                 <select name="genre" id="genres" class="form-control">
@@ -75,6 +75,20 @@
                                     </div>
                                 </div>
                                 <div class="clearfix"></div>
+                            </div>
+                        </div>
+
+                        <!-- Platform filter-->
+                        <h4 class="nk-widget-title"><span><span class="text-main-1">Platform</span></span></h4>
+                        <div id="price" class="nk-widget-content">
+                            <div id="platform" class="input-group">
+                                <select name="platform" id="platforms" class="form-control">
+                                    <option value="" disabled selected>Select your option</option>
+                                    <option value="PC">PC</option>
+                                    <option value="Xbox">Xbox</option>
+                                    <option value="PlayStation">PlayStation</option>
+                                    <option value="Switch">Switch</option>
+                                </select>
                             </div>
                         </div>
 
