--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -39,67 +39,42 @@
         <!-- START: Image Slider -->
         <div class="nk-image-slider" data-autoplay="8000">
 
+            @if (Model == null)
+            {
+                <div class="nk-image-slider-item">
+                    <img src="assets/images/slide-1.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-1-thumb.jpg">
 
-            <div class="nk-image-slider-item">
-                <img src="assets/images/slide-1.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-1-thumb.jpg">
+                    <div class="nk-image-slider-content">
 
-                <div class="nk-image-slider-content">
+                        <h3 class="h4">As we Passed, I remarked</h3>
+                        <p class="text-white">As we passed, I remarked a beautiful church-spire rising above some old elms in the park; and before them, in the midst of a lawn, chimneys covered with ivy, and the windows shining in the sun.</p>
+                        <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white nk-btn-hover-color-main-1">Read More</a>
 
-                    <h3 class="h4">As we Passed, I remarked</h3>
-                    <p class="text-white">As we passed, I remarked a beautiful church-spire rising above some old elms in the park; and before them, in the midst of a lawn, chimneys covered with ivy, and the windows shining in the sun.</p>
-                    <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white nk-btn-hover-color-main-1">Read More</a>
-
-                </div>
-
-            </div>
-
-            <div class="nk-image-slider-item">
-                <img src="assets/images/slide-2.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-2-thumb.jpg">
-
-                <div class="nk-image-slider-content">
-
-                    <h3 class="h4">He made his passenger captain of one</h3>
-                    <p class="text-white">Now the races of these two have been for some ages utterly extinct, and besides to discourse any further of them would not be at all to my purpose. But the concern I have most at heart is for our Corporation of Poets, from whom I am preparing a petition to your Highness,  to be subscribed with the names of one...</p>
-                    <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white nk-btn-hover-color-main-1">Read More</a>
+                    </div>
 
                 </div>
+            }
+            else
+            {
+                @foreach (var g in Model)
+                {
+                    <div class="nk-image-slider-item">
+                        <img src="@Url.Content(g.imagePath)" alt="" class="nk-image-slider-img" data-thumb="@Url.Content(g.imagePath)">
 
-            </div>
+                        <div class="nk-image-slider-content">
 
-            <div class="nk-image-slider-item">
-                <img src="assets/images/slide-3.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-3-thumb.jpg">
+                            <h3 class="h4">@Html.DisplayFor(game => g.Name)</h3>
+                            <p class="text-white">@Html.DisplayFor(game => g.Description)</p>
+                            <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white nk-btn-hover-color-main-1">Read More</a>
 
-            </div>
+                        </div>
 
-            <div class="nk-image-slider-item">
-                <img src="assets/images/slide-4.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-4-thumb.jpg">
-
-                <div class="nk-image-slider-content">
-
-                    <h3 class="h4">At length one of them called out in a clear</h3>
-                    <p class="text-white">TJust then her head struck against the roof of the hall: in fact she was now more than nine feet high...</p>
-                    <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white nk-btn-hover-color-main-1">Read More</a>
-
-                </div>
-
-            </div>
-
-            <div class="nk-image-slider-item">
-                <img src="assets/images/slide-5.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-5-thumb.jpg">
-
-                <div class="nk-image-slider-content">
-
-                    <h3 class="h4">For good, too though, in consequence</h3>
-                    <p class="text-white">She gave my mother such a turn, that I have always been convinced I am indebted to Miss Betsey for having been born on a Friday. The word was appropriate to the moment.</p>
-                    <p class="text-white">My mother was so much worse that Peggotty, coming in with the teaboard and candles, and seeing at a glance how ill she was, - as Miss Betsey might have done sooner if there had been light enough, - conveyed her upstairs to her own room with all speed; and immediately dispatched Ham Peggotty, her nephew, who had been for some days past secreted in the house...</p>
-                    <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white nk-btn-hover-color-main-1">Read More</a>
-
-                </div>
-
-            </div>
-
+                    </div>
+                }
+            }
         </div>
         <!-- END: Image Slider -->
+
         <!-- START: Categories -->
         <div class="nk-gap-2"></div>
         <div class="row vertical-gap">
@@ -109,8 +84,8 @@
                         <img src="assets/images/icon-mouse.png" alt="">
                     </div>
                     <div class="nk-feature-cont">
-                        <h3 class="nk-feature-title"><a asp-controller="Games" asp-action="Index">PC</a></h3>
-                        <h4 class="nk-feature-title text-main-1"><a asp-controller="Games" asp-action="Index">View Games</a></h4>
+                        <h3 class="nk-feature-title">@Html.ActionLink("PC", "Filter", "Games", new { platform = "PC", lowPrice = 0, highPrice = 500 }, null)</h3>
+                        <h4 class="nk-feature-title text-main-1">@Html.ActionLink("Games", "Filter", "Games", new { platform = "PC", lowPrice = 0, highPrice = 500 }, null)</h4>
                     </div>
                 </div>
             </div>
@@ -120,8 +95,9 @@
                         <img src="assets/images/icon-gamepad.png" alt="">
                     </div>
                     <div class="nk-feature-cont">
-                        <h3 class="nk-feature-title"><a asp-controller="Games" asp-action="Index">PS4</a></h3>
-                        <h4 class="nk-feature-title text-main-1"><a asp-controller="Games" asp-action="Index">View Games</a></h4>
+                        
+                        <h3 class="nk-feature-title">@Html.ActionLink("PlayStation", "Filter", "Games", new { platform = "PlayStation", lowPrice = 0, highPrice = 500 }, null)</h3>
+                        <h4 class="nk-feature-title text-main-1">@Html.ActionLink("Games", "Filter", "Games", new { platform = "PlayStation", lowPrice = 0, highPrice = 500 }, null)</h4>
                     </div>
                 </div>
             </div>
@@ -131,8 +107,8 @@
                         <img src="assets/images/icon-gamepad-2.png" alt="">
                     </div>
                     <div class="nk-feature-cont">
-                        <h3 class="nk-feature-title"><a href="#">Xbox</a></h3>
-                        <h4 class="nk-feature-title text-main-1"><a asp-controller="Games" asp-action="Index">View Games</a></h4>
+                        <h3 class="nk-feature-title">@Html.ActionLink("Xbox", "Filter", "Games", new { platform = "Xbox", lowPrice = 0, highPrice = 500 }, null)</h3>
+                        <h4 class="nk-feature-title text-main-1">@Html.ActionLink("Games", "Filter", "Games", new { platform = "Xbox", lowPrice = 0, highPrice = 500 }, null)</h4>
                     </div>
                 </div>
             </div>
