--- a/FowlerSite/Views/Login/CreateAdmin.cshtml
+++ b/FowlerSite/Views/Login/CreateAdmin.cshtml
@@ -1,7 +1,43 @@
-﻿
-@{
-    ViewData["Title"] = "CreateAdmin";
-}
+﻿@model Users
 
-<h1>CreateAdmin</h1>
-
+<!DOCTYPE html>
+<head>
+    <link href="~/assets/css/login.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="flex-container">
+        <div class="content-container">
+            <div class="form-container">
+                <form method="post" asp-controller="Users" asp-action="CreateUser">
+                    <h1>
+                        Create an Account:
+                    </h1>
+                    <br>
+                    <br>
+                    <span class="subtitle">FIRST NAME:</span>
+                    <br>
+                    <input type="text" name="FirstName" value="" asp-for="FirstName" />
+                    <br />
+                    <span class="subtitle">LAST NAME:</span>
+                    <br>
+                    <input type="text" name="LastName" value="" asp-for="LastName" />
+                    <br />
+                    <span class="subtitle">CREATE USERNAME:</span>
+                    <br>
+                    <input type="text" name="username" value="" asp-for="Username" />
+                    <br>
+                    <span class="subtitle">CREATE PASSWORD:</span>
+                    <br>
+                    <input type="password" name="password" value="" asp-for="Password" />
+                    <br>
+                    <span class="subtitle">ENTER YOUR EMAIL:</span>
+                    <br />
+                    <input type="text" name="emailaddress" value="" asp-for="EmailAddress" />
+                    <input type="hidden" name="Admin" value="1" asp-for="Admin" />
+                    <br /><br />
+                    <button class="btn btn-outline-primary" type="submit">Create</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
