--- a/FowlerSite/Views/Login/Login.cshtml
+++ b/FowlerSite/Views/Login/Login.cshtml
@@ -16,11 +16,11 @@
                     <br>
                     <span class="subtitle">USERNAME:</span>
                     <br>
-                    <input type="text" name="username" value="" asp-for="Username" />
+                    <input type="text" name="username" value="" asp-for="Username"/>
                     <br>
                     <span class="subtitle">PASSWORD:</span>
                     <br>
-                    <input type="password" name="pasword" value="" asp-for="Password" />
+                    <input type="password" name="password" value="" asp-for="Password" />
                     <br><br>
                     <button class="btn btn-outline-primary" type="submit">Login</button>
                     <a class="btn btn-outline-secondary" asp-action="Create">Create an Account</a>
