tf-22. Prepared the checkout billing form for entering data into the database.

--- a/FowlerSite/Views/Store/StoreCart.cshtml
+++ b/FowlerSite/Views/Store/StoreCart.cshtml
@@ -473,6 +473,7 @@
                 </div>
 
                 <div class="nk-gap-2"></div>
+                @Html.ActionLink("StoreCheckout", "CheckOut", "Store");
                 <a class="nk-btn nk-btn-rounded nk-btn-color-main-1 float-right" asp-action="StoreCheckout">Proceed to Checkout</a>
                 <div class="clearfix"></div>
             </div>
