TF-23 Minor code cleanup and some aesthetic changes to the home page.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -296,79 +296,26 @@
         <div class="nk-gap"></div>
         <div class="row vertical-gap">
 
-
-            <div class="col-md-6">
-                <div class="nk-product-cat">
-                    <a class="nk-product-image" asp-action="StoreProduct">
-                        <img src="assets/images/product-11-xs.jpg" alt="She gave my mother">
-                    </a>
-                    <div class="nk-product-cont">
-                        <h3 class="nk-product-title h5"><a asp-action="StoreProduct">She gave my mother</a></h3>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-price">$ 14.00</div>
-                        <div class="nk-gap-1"></div>
-                        <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
+            @for (int i = 0; i < 4; i++)
+            {
+                Model.ElementAt(i);
+                <div class="col-md-6">
+                    <div class="nk-product-cat">
+                        <a class="nk-product-image" asp-action="StoreProduct">
+                            <img src="@Url.Content(Model.ElementAt(i).imagePath)" alt="@Model.ElementAt(i).Name">
+                        </a>
+                        <div class="nk-product-cont">
+                            <h3 class="nk-product-title h5"><a asp-action="StoreProduct">@Model.ElementAt(i).Name</a></h3>
+                            <div class="nk-gap-1"></div>
+                            <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
+                            <div class="nk-gap-1"></div>
+                            <div class="nk-product-price">$@Model.ElementAt(i).Price</div>
+                            <div class="nk-gap-1"></div>
+                            <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-
-            <div class="col-md-6">
-                <div class="nk-product-cat">
-                    <a class="nk-product-image" asp-action="StoreProduct">
-                        <img src="assets/images/product-12-xs.jpg" alt="A hundred thousand">
-                    </a>
-                    <div class="nk-product-cont">
-                        <h3 class="nk-product-title h5"><a asp-action="StoreProduct">A hundred thousand</a></h3>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-price">$ 20.00</div>
-                        <div class="nk-gap-1"></div>
-                        <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-6">
-                <div class="nk-product-cat">
-                    <a class="nk-product-image" asp-action="StoreProduct">
-                        <img src="assets/images/product-13-xs.jpg" alt="So saying he unbuckled">
-                    </a>
-                    <div class="nk-product-cont">
-                        <h3 class="nk-product-title h5"><a asp-action="StoreProduct">So saying he unbuckled</a></h3>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-price">$ 23.00</div>
-                        <div class="nk-gap-1"></div>
-                        <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-6">
-                <div class="nk-product-cat">
-                    <a class="nk-product-image" asp-action="StoreProduct">
-                        <img src="~/assets/images/product-14-xs.jpg" alt="However, I have reason">
-                    </a>
-                    <div class="nk-product-cont">
-                        <h3 class="nk-product-title h5"><a asp-action="StoreProduct">However, I have reason</a></h3>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-rating" data-rating="1.5"> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
-                        <div class="nk-gap-1"></div>
-                        <div class="nk-product-price">$ 32.00</div>
-                        <div class="nk-gap-1"></div>
-                        <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
+            }
         <!-- END: Best Selling -->
     </div>
 
