--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -123,173 +123,36 @@
         <div class="nk-blog-grid">
             <div class="row">
 
-
+            @for (var count = Model.Count()-1; count > Model.Count() - 5; count--)
+            {
                 <div class="col-md-6 col-lg-3">
                     <!-- START: Post -->
                     <div class="nk-blog-post">
                         <a href="blog-article.html" class="nk-post-img">
-                            <img src="assets/images/post-5-mid.jpg" alt="He made his passenger captain of one">
+                            <img src="@Url.Content(Model.ElementAt(count).imagePath)" alt="@Url.Content(Model.ElementAt(count).Name)">
                             <span class="nk-post-comments-count">13</span>
 
                             <span class="nk-post-categories">
-                                <span class="bg-main-5">Indie</span>
+                                <span class="bg-main-5">@Url.Content(Model.ElementAt(count).Genre)</span>
                             </span>
 
                         </a>
                         <div class="nk-gap"></div>
-                        <h2 class="nk-post-title h4"><a href="blog-article.html">He made his passenger captain of one</a></h2>
+                        <h2 class="nk-post-title h4"><a href="blog-article.html">@Url.Content(Model.ElementAt(count).Name)</a></h2>
                         <div class="nk-post-text">
-                            <p>Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door...</p>
+                            <p>@Url.Content(Model.ElementAt(count).Description)</p>
                         </div>
                         <div class="nk-gap"></div>
-                        <a href="blog-article.html" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Read More</a>
-                        <div class="nk-post-date float-right"><span class="fa fa-calendar"></span> Jul 23, 2018</div>
+                        <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">View Details</a>
                     </div>
                     <!-- END: Post -->
                 </div>
-
-
-                <div class="col-md-6 col-lg-3">
-                    <!-- START: Post -->
-                    <div class="nk-blog-post">
-                        <a href="blog-article.html" class="nk-post-img">
-                            <img src="assets/images/post-6-mid.jpg" alt="At first, for some time, I was not able to answer">
-                            <span class="nk-post-comments-count">0</span>
-
-                            <span class="nk-post-categories">
-                                <span class="bg-main-5">Racing</span>
-                            </span>
-
-                        </a>
-                        <div class="nk-gap"></div>
-                        <h2 class="nk-post-title h4"><a href="blog-article.html">At first, for some time, I was not able to answer</a></h2>
-                        <div class="nk-post-text">
-                            <p>This little wandering journey, without settled place of abode, had been so unpleasant to me, that my own house, as I called it to myself, was a perfect settlement to me compared to that...</p>
-                        </div>
-                        <div class="nk-gap"></div>
-                        <a href="blog-article.html" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Read More</a>
-                        <div class="nk-post-date float-right"><span class="fa fa-calendar"></span> Jul 3, 2018</div>
-                    </div>
-                    <!-- END: Post -->
-                </div>
-
-
-                <div class="col-md-6 col-lg-3">
-                    <!-- START: Post -->
-                    <div class="nk-blog-post">
-                        <a href="blog-article.html" class="nk-post-img">
-                            <img src="assets/images/post-7-mid.jpg" alt="At length one of them called out in a clear">
-                            <span class="nk-post-comments-count">0</span>
-
-                            <span class="nk-post-categories">
-                                <span class="bg-main-6">MOBA</span>
-                            </span>
-
-                        </a>
-                        <div class="nk-gap"></div>
-                        <h2 class="nk-post-title h4"><a href="blog-article.html">At length one of them called out in a clear</a></h2>
-                        <div class="nk-post-text">
-                            <p>TJust then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door...</p>
-                        </div>
-                        <div class="nk-gap"></div>
-                        <a href="blog-article.html" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Read More</a>
-                        <div class="nk-post-date float-right"><span class="fa fa-calendar"></span> Jul 3, 2018</div>
-                    </div>
-                    <!-- END: Post -->
-                </div>
-
-
-                <div class="col-md-6 col-lg-3">
-                    <!-- START: Post -->
-                    <div class="nk-blog-post">
-                        <a href="blog-article.html" class="nk-post-img">
-                            <img src="assets/images/post-8-mid.jpg" alt="For good, too though, in consequence">
-                            <span class="nk-post-comments-count">0</span>
-
-                            <span class="nk-post-categories">
-                                <span class="bg-main-2">Adventure</span>
-                            </span>
-
-                        </a>
-                        <div class="nk-gap"></div>
-                        <h2 class="nk-post-title h4"><a href="blog-article.html">For good, too though, in consequence</a></h2>
-                        <div class="nk-post-text">
-                            <p>This little wandering journey, without settled place of abode, had been so unpleasant to me, that my own house, as I called it to myself, was a perfect settlement to me compared to that...</p>
-                        </div>
-                        <div class="nk-gap"></div>
-                        <a href="blog-article.html" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Read More</a>
-                        <div class="nk-post-date float-right"><span class="fa fa-calendar"></span> Jul 3, 2018</div>
-                    </div>
-                    <!-- END: Post -->
-                </div>
+            }
 
             </div>
         </div>
         <!-- END: Latest Additions -->
-        <!-- START: Latest Pictures -->
-        <div class="nk-gap"></div>
-        <h2 class="nk-decorated-h-2 h3"><span><span class="text-main-1">Latest</span> Pictures</span></h2>
-        <div class="nk-gap"></div>
-        <div class="nk-popup-gallery">
-            <div class="row vertical-gap">
-                <div class="col-lg-4 col-md-6">
-                    <div class="nk-gallery-item-box">
-                        <a href="~/assets/images/gallery-1.jpg" class="nk-gallery-item" data-size="1016x572">
-                            <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
-                            <img src="assets/images/gallery-1-thumb.jpg" alt="">
-                        </a>
-                        <div class="nk-gallery-item-description">
-                            <h4>Called Let</h4>
-                            Divided thing, land it evening earth winged whose great after. Were grass night. To Air itself saw bring fly fowl. Fly years behold spirit day greater of wherein winged and form. Seed open don't thing midst created dry every greater divided of, be man is. Second Bring stars fourth gathering he hath face morning fill. Living so second darkness. Moveth were male. May creepeth. Be tree fourth.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="nk-gallery-item-box">
-                        <a href="~/assets/images/gallery-2.jpg" class="nk-gallery-item" data-size="1188x594">
-                            <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
-                            <img src="assets/images/gallery-2-thumb.jpg" alt="">
-                        </a>
-                        <div class="nk-gallery-item-description">
-                            Seed open don't thing midst created dry every greater divided of, be man is. Second Bring stars fourth gathering he hath face morning fill. Living so second darkness. Moveth were male. May creepeth. Be tree fourth.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="nk-gallery-item-box">
-                        <a href="~/assets/images/gallery-3.jpg" class="nk-gallery-item" data-size="625x350">
-                            <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
-                            <img src="assets/images/gallery-3-thumb.jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="nk-gallery-item-box">
-                        <a href="~/assets/images/gallery-4.jpg" class="nk-gallery-item" data-size="873x567">
-                            <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
-                            <img src="assets/images/gallery-4-thumb.jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="nk-gallery-item-box">
-                        <a href="~/assets/images/gallery-5.jpg" class="nk-gallery-item" data-size="471x269">
-                            <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
-                            <img src="assets/images/gallery-5-thumb.jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="nk-gallery-item-box">
-                        <a href="~/assets/images/gallery-6.jpg" class="nk-gallery-item" data-size="472x438">
-                            <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
-                            <img src="assets/images/gallery-6-thumb.jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- END: Latest Pictures -->
+        
         <!-- START: Best Selling -->
         <div class="nk-gap-3"></div>
         <h3 class="nk-decorated-h-2"><span><span class="text-main-1">Best</span> Selling</span></h3>
